crates/turborepo-integration-tests/tests/snapshots/run_force__baseline_cache_miss.snap
---
source: crates/turborepo-integration-tests/tests/run_force.rs
expression: redact_output(&result.combined_output())
---
• Packages in scope: my-app
• Running build in 1 packages
• Remote caching disabled
my-app:build: cache miss, executing [HASH]

 Tasks:    1 successful, 1 total
Cached:    0 cached, 1 total
  Time: [TIME] 

 WARNING  no output files found for task my-app#build. Please check your `outputs` key in `turbo.json`
